--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/nss-day-cohort-17/pizza-shack-joeshep/issues"
   },
-  "homepage": "https://github.com/nss-day-cohort-17/pizza-shack-joeshep#readme"
+  "homepage": "https://github.com/nss-day-cohort-17/pizza-shack-joeshep#readme",
+  "devDependencies": {
+    "bower": "^1.7.9"
+  },
+  "dependencies": {
+    "express": "^4.15.2",
+    "pug": "^2.0.0-beta11"
+  }
 }
