--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bower": "^1.7.9"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "pug": "^2.0.0-beta11"
   }
