--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "start-dev": "nodemon app.js",
     "deploy": "git push heroku master",
     "postinstall": "bower install"
   },
