--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "deploy": "git push heroku master",
     "postinstall": "bower install"
   },
-  "devDependencies": {
-    "bower": "^1.7.9"
-  },
   "dependencies": {
+    "bower": "^1.7.9",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "pug": "^2.0.0-beta11"
