--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bookshelf": "^0.10.3",
+    "bookshelf-bcrypt": "^2.1.0",
     "bower": "^1.7.9",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
